Add support for monotomic clocks to manipulate time
 The `MonotonicClock` interface offers an abstraction for us to
 manipulate time in test. It aims to improve the implementation of
 `TestScope` so that develpers can verify metric recording of timers
 and histograms.